<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:iconTint="@color/colorPrimary"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search"/>

    <item
        android:id="@+id/action_all_users"
        android:title="All Users" />
    <item
        android:id="@+id/action_log_out"
        app:showAsAction="never"
        android:title="@string/log_out"/>

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/account_settings" />



    <!--&lt;!&ndash; Settings, should always be in the overflow &ndash;&gt;-->
    <!--<item android:id="@+id/action_settings"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="never"/>-->

</menu>