<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCharcoal"
    android:backgroundTint="@color/colorCharcoal"
    tools:context="com.edu.pc.courtadvisor.OthersProfileActivity">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/userprofile" />

    <TextView
        android:id="@+id/profile_displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/display_name"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_displayName"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:layout_marginTop="21dp"
        android:textColor="@color/colorWhite"
        android:text="@string/status"/>

    <TextView
        android:id="@+id/profile_totalFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/profile_send_req_btn"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="20dp"
        android:text="@string/friend_count" />

    <Button
        android:id="@+id/profile_send_req_btn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/profile_deny_req_btn"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/send_friend_request"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/profile_deny_req_btn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:textSize="18sp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/deny_friend_request"
        android:textColor="@android:color/white" />
</RelativeLayout>
