<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context="com.edu.pc.courtadvisor.SignUpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/create_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="90dp"
        android:text="@string/create_a_new_account"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/create_account_title"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:theme="@style/EditTextTheme"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/name"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:theme="@style/EditTextTheme"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/login"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerHorizontal="true"
        android:theme="@style/EditTextTheme"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/signUpButton"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:elevation="10dp"
        android:foreground="?attr/selectableItemBackground"
        android:onClick="signUp"
        android:stateListAnimator="@anim/log_in_animation"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>
