<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.edu.pc.courtadvisor.AddMatchActivity"
    tools:showIn="@layout/activity_add_match">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="Add Match To Database"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/team1Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/teamOneName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/team_1_name"
            android:textColorLink="@color/colorPrimary" />

        <EditText
            android:id="@+id/teamOneScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/score"
            android:inputType="number"
            android:textColorLink="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/team2Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/team1Input"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/teamTwoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/team_2_name"
            android:textColorLink="@color/colorPrimary" />

        <EditText
            android:id="@+id/teamTwoScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/score"
            android:inputType="number"
            android:textColorLink="@color/colorPrimary" />

    </LinearLayout>

    <Button
        android:id="@+id/valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/team2Input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorPrimary"
        android:minWidth="120dp"
        android:text="@string/valider"
        android:textColor="@android:color/white" />

</RelativeLayout>
