<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context="com.edu.pc.courtadvisor.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_above="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:tint="@color/colorAccent"
        app:srcCompat="@drawable/logo"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:background="@color/colorStartGradient"
        android:drawableLeft="@drawable/login"
        android:drawableStart="@drawable/login"
        android:drawableTint="@android:color/white"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:theme="@style/EditTextTheme"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_above="@+id/logInButton"
        android:layout_alignLeft="@+id/login"
        android:layout_alignStart="@+id/login"
        android:layout_marginBottom="66dp"
        android:background="@color/colorStartGradient"
        android:drawableLeft="@drawable/lock_v"
        android:drawableStart="@drawable/lock_v"
        android:drawableTint="@android:color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:theme="@style/EditTextTheme"
        android:textSize="16sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/logInButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="118dp"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@anim/log_in_animation"
        android:clickable="true"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        android:onClick="logIn">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/log_in"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:onClick="onGoSignUp"/>

</RelativeLayout>
